Fixed match results size on mobile screen

--- a/styles/match-table.css
+++ b/styles/match-table.css
@@ -337,6 +337,9 @@
     height: auto;
     padding: 5px 24px 8px 24px;
     margin: 0 auto;
+    padding: 0;
+    border: none;
+    margin-top: 8px;
   }
   .match_table_command_logo {
     height: 70px;
